<resources>
    <string name="app_name">CALCULADORA</string>
    <string name="titulo">CALCULADORA</string>
    <string name="btnCalcular">Calcular</string>
    <string name="numero1">Ingrese Número 1</string>
    <string name="numero2">Ingrese Número 2</string>
    <string name="error_numero">Ingrese un número</string>
    <string name="limpiarText">limpiar</string>
    <string name="error_division">No se puede dividir entre 0</string>

    <string name="suma">Sumar</string>
    <string name="resta">Restar</string>
    <string name="multiplicacion">Multiplicar</string>
    <string name="division">Dividir</string>

    <string-array name="operaciones">
        <item>@string/suma</item>
        <item>@string/resta</item>
        <item>@string/multiplicacion</item>
        <item>@string/division</item>
    </string-array>

</resources>
